Update dependencies (#429)
- Armeria 0.89.0 -> 0.90.1
- Caffeine 2.7.0 -> 2.8.0
- SLF4J 1.7.26 -> 1.7.28
- Spring Boot 2.1.6 -> 2.1.7, 1.5.21 -> 1.5.22
- Build
  - AssertJ 3.12.2 -> 3.13.2
  - Checkstyle 8.22 -> 8.23
- Remove deprecated API usage